# whiteboard

./: CMakeLists.txt
src/: InputQuadrangle.cpp  InputQuadrangle.h  Rectification.cpp  Rectification.h
systest/: main.cpp
